--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,6 +26,9 @@
                     <a href="{{ url_for('main.contact') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Contact</a>
                     {% if current_user.is_authenticated %}
                         <a href="{{ url_for('main.custom_bidder') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Custom Bidder</a>
+                        {% if current_user.is_admin %}
+                            <a href="{{ url_for('main.admin_panel') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Admin Panel</a>
+                        {% endif %}
                         <a href="{{ url_for('main.account') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Account</a>
                         <a href="{{ url_for('main.logout') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Logout</a>
                     {% else %}
@@ -50,6 +53,9 @@
                     <a href="{{ url_for('main.contact') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Contact</a>
                     {% if current_user.is_authenticated %}
                         <a href="{{ url_for('main.custom_bidder') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Custom Bidder</a>
+                        {% if current_user.is_admin %}
+                            <a href="{{ url_for('main.admin_panel') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Admin Panel</a>
+                        {% endif %}
                         
                         <a href="{{ url_for('main.account') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Account</a>
                         <a href="{{ url_for('main.logout') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Logout</a>
