--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,12 +23,13 @@
                     <a href="{{ url_for('main.about') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">About</a>
                     <a href="{{ url_for('main.bid_estimator') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Bid Estimator</a>
                     <a href="{{ url_for('main.subscribe') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Subscribe</a>
+                    <li><a href="{{ url_for('main.blog') }}" class="hover:text-blue-400">Blog</a></li>
                     <a href="{{ url_for('main.contact') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Contact</a>
                     <li><a href="{{ url_for('main.project_ideas') }}" class="hover:text-blue-400">Project Ideas</a></li>
                     {% if current_user.is_authenticated %}
                         <a href="{{ url_for('main.custom_bidder') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Custom Bidder</a>
                         {% if current_user.is_admin %}
-                            <a href="{{ url_for('main.admin_panel') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Admin Panel</a>
+                            <a href="{{ url_for('main.admin') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Admin Panel</a>
                         {% endif %}
                         <a href="{{ url_for('main.account') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Account</a>
                         <a href="{{ url_for('main.logout') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Logout</a>
@@ -56,7 +57,7 @@
                     {% if current_user.is_authenticated %}
                         <a href="{{ url_for('main.custom_bidder') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Custom Bidder</a>
                         {% if current_user.is_admin %}
-                            <a href="{{ url_for('main.admin_panel') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Admin Panel</a>
+                            <a href="{{ url_for('main.admin') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Admin Panel</a>
                         {% endif %}
                         
                         <a href="{{ url_for('main.account') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Account</a>
